<resources>
    <string name="app_name">Cafe Vesuvius App</string>
    <string name="login_name">Login</string>
    <string name="login_user">UserName</string>
    <string name="login_Pass">Password</string>
    <string name="LoginMain_SignOut">Sign Out</string>
    <string name="Menu_Main">Menu</string>
    <string name="Menu_Appetisers">Appetisers</string>
    <string name="Menu_Salad">Salad</string>
    <string name="Menu_Sandwich">Sandwich</string>
    <string name="Menu_Burger">Burger</string>
    <string name="Menu_Pasta">Pasta</string>
    <string name="Menu_KidsMenu">Kids Menu</string>
    <string name="Menu_Drinks">Drinks</string>
    <string name="Order">Order:</string>
    <string name="AllOrders_Main">All Orders</string>
    <string name="Reservation_Main">Reservation</string>
    <string name="Reservations_Name">Name:</string>
    <string name="Reservations_Name_Hint">Name</string>
    <string name="Reservations_Phone">Phone:</string>
    <string name="Reservations_Phone_Hint">Phone</string>
    <string name="Reservations_NumberofPeople">Number of people:</string>
    <string name="Reservations_NumberofPeople_Hint">Number of people</string>
    <string name="Reservations_ReserveTables">Reserve Tables</string>
    <string-array name="TableLocations">
        <item>Bygning 1</item>
        <item>Bygning 2 (Under konstruktion)</item>
        <item>Udendørs</item>
    </string-array>
    <string name="loginMain_allOrders">All Orders</string>
    <string name="loginMain_todaySums">Today Sum</string>
    <string name="loginMain_orders">Orders</string>
    <string name="loginMain_reservation">Reservation</string>
    <string name="loginMain_kitchenOrders">Kitchen Orders</string>
    <string name="loginMain_tables">Tables</string>
    <string name="kitchenOrder">Order</string>
    <string name="note">Note</string>
    <string name="textView">TextView</string>
    <string name="dailySale">Days Sale</string>
    <string name="waiterDailySale">Waiter Day Sale</string>
    <string name="totalIncome">Total Income</string>
</resources>