<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/header"
    tools:context=".Menu">

    <Button
        android:id="@+id/button"
        style="@style/menu_button"
        android:text="@string/Menu_Appetisers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/textView"
        style="@style/menu_textView"
        android:text="@string/Menu_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/button2"
        style="@style/menu_button"
        android:text="@string/Menu_Burger"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <Button
        android:id="@+id/button3"
        style="@style/menu_button"
        android:text="@string/Menu_Sandwich"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <Button
        android:id="@+id/button5"
        style="@style/menu_button"
        android:text="@string/Menu_Pasta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
    <Button
        android:id="@+id/button6"
        style="@style/menu_button"
        android:text="@string/Menu_Salad"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
    <Button
        android:id="@+id/button7"
        style="@style/menu_button"
        android:text="@string/Menu_Drinks"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <ScrollView
        style="@style/menu_scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6">

        <LinearLayout style="@style/menu_linearLayout">

            <TextView
                style="@style/menu_scroll_textView"
                android:text="@string/Menu_Appetisers" />
            <RelativeLayout
                android:id="@+id/Appetizers"
                style="@style/menu_scroll_RelativeLayout"/>
            <View style="@style/menu_scroll_View" />
            <TextView
                style="@style/menu_scroll_textView"
                android:text="@string/Menu_Burger" />
            <RelativeLayout
                android:id="@+id/Burger"
                style="@style/menu_scroll_RelativeLayout"/>
            <View style="@style/menu_scroll_View" />
            <TextView
                style="@style/menu_scroll_textView"
                android:text="@string/Menu_Sandwich" />
            <RelativeLayout
                android:id="@+id/Sandwich"
                style="@style/menu_scroll_RelativeLayout"/>
            <View style="@style/menu_scroll_View" />
            <TextView
                style="@style/menu_scroll_textView"
                android:text="@string/Menu_Pasta" />
            <RelativeLayout
                android:id="@+id/Pasta"
                style="@style/menu_scroll_RelativeLayout"/>
            <View style="@style/menu_scroll_View" />
            <TextView
                style="@style/menu_scroll_textView"
                android:text="@string/Menu_Salad" />
            <RelativeLayout
                android:id="@+id/Salad"
                style="@style/menu_scroll_RelativeLayout"/>
            <View style="@style/menu_scroll_View" />
            <TextView
                style="@style/menu_scroll_textView"
                android:text="@string/Menu_Drinks" />
            <RelativeLayout
                android:id="@+id/Drinks"
                style="@style/menu_scroll_RelativeLayout"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>